--- a/package.json
+++ b/package.json
@@ -46,48 +46,48 @@
 	},
 	"resolutions": {},
 	"dependencies": {
-		"@angular/core": "6.0.9",
+		"@angular/core": "^7.1.3",
 		"angular2-logger": "^0.7.0",
-		"rxjs": "^6.2.2",
-		"rxjs-compat": "^6.2.2",
-		"socket.io-client": "^2.1.1",
+		"rxjs": "6.3.3",
+		"rxjs-compat": "6.3.3",
+		"socket.io-client": "2.2.0",
 		"stripe": "^6.12.1",
 		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
 		"@types/async": "^2.0.31",
-		"@types/d3-color": "^1.2.1",
+		"@types/d3-color": "1.2.1",
 		"@types/faker": "^4.1.2",
-		"@types/googlemaps": "^3.30.11",
-		"@types/jasmine": "^2.8.8",
-		"@types/jasminewd2": "^2.0.3",
-		"@types/leaflet": "^1.2.8",
+		"@types/googlemaps": "3.30.16",
+		"@types/jasmine": "3.3.1",
+		"@types/jasminewd2": "2.0.6",
+		"@types/leaflet": "1.2.14",
 		"@types/mongodb": "^3.1.2",
 		"@types/mongoose": "^5.2.17",
-		"@types/node": "^10.5.2",
+		"@types/node": "~10.12.15",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/stripe": "^6.0.0",
+		"@types/stripe": "^6.0.4",
 		"@types/uuid": "^3.4.4",
 		"codelyzer": "^4.4.4",
 		"husky": "^1.2.0",
-		"jasmine-core": "^2.6.4",
-		"jasmine-spec-reporter": "^4.1.1",
-		"karma": "^3.0.0",
+		"jasmine-core": "~3.3.0",
+		"jasmine-spec-reporter": "4.2.1",
+		"karma": "^3.1.3",
 		"karma-chrome-launcher": "^2.2.0",
-		"karma-cli": "^1.0.1",
-		"karma-coverage-istanbul-reporter": "^1.3.0",
-		"karma-jasmine": "^1.1.0",
-		"karma-jasmine-html-reporter": "^0.2.2",
+		"karma-cli": "^2.0.0",
+		"karma-coverage-istanbul-reporter": "^2.0.4",
+		"karma-jasmine": "^2.0.1",
+		"karma-jasmine-html-reporter": "^1.4.0",
 		"lerna": "^3.4.0",
 		"lerna-changelog": "^0.8.0",
-		"lint-staged": "^7.3.0",
+		"lint-staged": "^8.1.0",
 		"npm-check-updates": "^2.15.0",
 		"prettier": "^1.15.3",
 		"pretty-quick": "^1.8.0",
-		"tslint": "^5.11.0",
+		"tslint": "5.11.0",
 		"tslint-config-prettier": "^1.17.0",
 		"lighthouse": "^4.0.0-alpha.2-3.2.1",
-		"typescript": "^2.9.2"
+		"typescript": "~3.2.2"
 	},
 	"husky": {
 		"hooks": {
