chore(package): update dependencies

--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -41,18 +41,18 @@
 		"docs:serve": "compodoc -p tsconfig.json -d docs -s"
 	},
 	"dependencies": {
-		"@angular/animations": "5.2.10",
-		"@angular/common": "5.2.10",
-		"@angular/compiler": "5.2.10",
-		"@angular/compiler-cli": "5.2.10",
-		"@angular/core": "5.2.10",
-		"@angular/forms": "5.2.10",
-		"@angular/http": "5.2.10",
-		"@angular/platform-browser": "5.2.10",
-		"@angular/platform-browser-dynamic": "5.2.10",
+		"@angular/animations": "^7.1.3",
+		"@angular/common": "^7.1.3",
+		"@angular/compiler": "^7.1.3",
+		"@angular/compiler-cli": "7.1.3",
+		"@angular/core": "^7.1.3",
+		"@angular/forms": "^7.1.3",
+		"@angular/http": "~7.1.3",
+		"@angular/platform-browser": "^7.1.3",
+		"@angular/platform-browser-dynamic": "^7.1.3",
 		"@ionic-native/call-number": "^4.12.2",
 		"@ionic-native/camera": "^4.12.2",
-		"@ionic-native/core": "^4.12.2",
+		"@ionic-native/core": "4.18.0",
 		"@ionic-native/device": "^4.12.2",
 		"@ionic-native/geolocation": "^4.12.2",
 		"@ionic-native/globalization": "^4.12.2",
@@ -61,14 +61,14 @@
 		"@ionic-native/local-notifications": "^4.12.2",
 		"@ionic-native/mixpanel": "^4.12.2",
 		"@ionic-native/network": "^4.12.2",
-		"@ionic-native/splash-screen": "4.12.2",
-		"@ionic-native/status-bar": "4.12.2",
+		"@ionic-native/splash-screen": "4.18.0",
+		"@ionic-native/status-bar": "4.18.0",
 		"@ionic-native/vibration": "^4.12.2",
-		"@ionic/storage": "2.1.3",
-		"@ngx-translate/core": "^9.1.1",
-		"@ngx-translate/http-loader": "^3.0.1",
+		"@ionic/storage": "2.2.0",
+		"@ngx-translate/core": "11.0.1",
+		"@ngx-translate/http-loader": "4.0.0",
 		"angular2-logger": "^0.7.0",
-		"apollo-angular": "1.1.2",
+		"apollo-angular": "1.5.0",
 		"apollo-angular-link-http": "^1.1.1",
 		"apollo-cache-inmemory": "^1.2.7",
 		"apollo-client": "^2.3.8",
@@ -76,17 +76,17 @@
 		"bower": "^1.8.4",
 		"call-number": "^1.0.1",
 		"connect": "^3.6.6",
-		"cordova-android": "7.1.1",
-		"cordova-browser": "5.0.3",
+		"cordova-android": "7.1.4",
+		"cordova-browser": "5.0.4",
 		"cordova-open-native-settings": "^1.5.1",
 		"cordova-plugin-badge": "^0.8.7",
 		"cordova-plugin-device": "^2.0.2",
-		"cordova-plugin-email-composer": "^0.8.15",
+		"cordova-plugin-email-composer": "^0.9.1",
 		"cordova-plugin-geolocation": "^4.0.1",
 		"cordova-plugin-globalization": "^1.11.0",
 		"cordova-plugin-google-analytics": "^1.8.6",
 		"cordova-plugin-ionic-keyboard": "^2.1.2",
-		"cordova-plugin-ionic-webview": "^1.2.1",
+		"cordova-plugin-ionic-webview": "^2.3.1",
 		"cordova-plugin-local-notification": "^0.9.0-beta.2",
 		"cordova-plugin-mixpanel": "^4.4.1",
 		"cordova-plugin-network-information": "^2.0.1",
@@ -96,24 +96,24 @@
 		"cordova-plugin-vibration": "^3.1.0",
 		"cordova-plugin-whitelist": "^1.3.3",
 		"font-awesome": "^4.7.0",
-		"graphql": "^0.13.2",
+		"graphql": "^14.0.2",
 		"graphql-tag": "^2.9.2",
 		"hooks-fixed": "^2.0.2",
 		"ionic-angular": "^3.9.2",
-		"ionicons": "3.0.0",
+		"ionicons": "~4.5.0",
 		"kareem": "^2.1.0",
 		"lodash": "^4.17.10",
 		"mongoose": "^5.2.9",
-		"mpath": "^0.4.1",
+		"mpath": "^0.5.1",
 		"mquery": "^3.0.0",
 		"mx.ferreyra.callnumber": "0.0.2",
 		"node-sass": "^4.9.0",
 		"node-uuid": "^1.4.8",
 		"reflect-metadata": "^0.1.12",
-		"rxjs": "^6.2.2",
-		"rxjs-compat": "^6.2.2",
+		"rxjs": "6.3.3",
+		"rxjs-compat": "6.3.3",
 		"save": "^2.3.2",
-		"socket.io-client": "^2.1.1",
+		"socket.io-client": "2.2.0",
 		"stripe": "^6.0.0",
 		"sw-toolbox": "3.6.0",
 		"uuid": "^3.3.2",
@@ -122,20 +122,20 @@
 		"zone.js": "0.8.26"
 	},
 	"devDependencies": {
-		"@ionic/app-scripts": "^3.2.0",
-		"@types/d3-color": "1.0.5",
-		"@types/googlemaps": "3.30.4",
-		"@types/jasmine": "2.5.54",
-		"@types/jasminewd2": "2.0.3",
-		"@types/leaflet": "1.2.3",
+		"@ionic/app-scripts": "3.2.1",
+		"@types/d3-color": "1.2.1",
+		"@types/googlemaps": "3.30.16",
+		"@types/jasmine": "3.3.1",
+		"@types/jasminewd2": "2.0.6",
+		"@types/leaflet": "1.2.14",
 		"@types/mongodb": "^3.0.15",
 		"@types/mongoose": "^5.2.17",
-		"@types/node": "6.0.90",
-		"@types/reflect-metadata": "^0.1.0",
+		"@types/node": "~10.12.15",
+		"@types/reflect-metadata": "0.1.0",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/uuid": "^3.4.4",
 		"@compodoc/compodoc": "^1.1.5",
-		"typescript": "~2.6.2"
+		"typescript": "~3.2.2"
 	},
 	"config": {
 		"ionic_webpack": "./config/webpack.config.js"
