chore(package): update dependencies

--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -43,13 +43,13 @@
 		"@nestjs/common": "^5.3.9",
 		"@nestjs/core": "^5.3.10",
 		"@nestjs/cqrs": "^5.1.1",
-		"@nestjs/graphql": "^3.0.0",
-		"@nestjs/microservices": "5.1.0",
+		"@nestjs/graphql": "^5.4.0",
+		"@nestjs/microservices": "5.5.0",
 		"@nestjs/passport": "^5.1.0",
 		"@nestjs/swagger": "^2.5.1",
 		"@nestjs/testing": "^5.3.8",
-		"@nestjs/websockets": "5.3.8",
-		"apollo-server-express": "^1.2.0",
+		"@nestjs/websockets": "5.5.0",
+		"apollo-server-express": "^2.3.1",
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.1",
 		"bluebird": "^3.5.1",
@@ -65,7 +65,7 @@
 		"cors": "^2.8.4",
 		"cross-env": "^5.2.0",
 		"destroy": "^1.0.4",
-		"dotenv": "^5.0.1",
+		"dotenv": "^6.2.0",
 		"envalid": "^4.1.4",
 		"errorhandler": "^1.5.0",
 		"etag": "^1.8.1",
@@ -73,22 +73,22 @@
 		"express": "^4.16.3",
 		"express-handlebars": "^3.0.0",
 		"faker": "^4.1.0",
-		"graphql": "^0.11.7",
+		"graphql": "^14.0.2",
 		"graphql-playground-middleware-express": "^1.7.1",
-		"graphql-subscriptions": "^0.5.6",
-		"graphql-tools": "^2.11.0",
+		"graphql-subscriptions": "^1.0.0",
+		"graphql-tools": "^4.0.3",
 		"handlebars": "^4.0.11",
 		"image-size": "^0.6.2",
-		"install": "^0.10.4",
-		"inversify": "^4.11.1",
+		"install": "^0.12.2",
+		"inversify": "^5.0.1",
 		"ipstack": "^0.1.1",
 		"jsonwebtoken": "^8.3.0",
 		"lodash": "^4.17.5",
-		"method-override": "^2.3.10",
+		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.1.0",
 		"moment": "^2.21.0",
-		"mongodb-memory-server": "^1.9.3",
+		"mongodb-memory-server": "^2.8.0",
 		"mongoose": "^5.2.4",
 		"morgan": "^1.9.0",
 		"ms": "^2.1.1",
@@ -106,11 +106,11 @@
 		"request": "^2.83.0",
 		"request-ip": "^2.1.1",
 		"request-promise": "^4.2.2",
-		"rxjs": "^6.2.1",
-		"rxjs-compat": "^6.2.1",
+		"rxjs": "6.3.3",
+		"rxjs-compat": "6.3.3",
 		"serve-favicon": "^2.4.5",
-		"socket.io": "~1.5.0",
-		"socket.io-client": "^2.1.1",
+		"socket.io": "~2.2.0",
+		"socket.io-client": "2.2.0",
 		"source-map-support": "^0.5.3",
 		"stripe": "^6.12.1",
 		"subscriptions-transport-ws": "^0.9.15",
@@ -120,11 +120,11 @@
 		"underscore.string": "^3.3.4",
 		"upath": "^1.1.0",
 		"uuid": "^3.3.2",
-		"validator": "^9.4.1",
-		"ws": "^4.0.0"
+		"validator": "^10.9.0",
+		"ws": "^6.1.2"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "^2.0.0",
+		"@types/bcrypt": "^3.0.0",
 		"@types/bluebird": "^3.5.20",
 		"@types/body-parser": "^1.16.8",
 		"@types/bunyan": "^1.8.4",
@@ -138,7 +138,7 @@
 		"@types/handlebars": "^4.0.36",
 		"@types/inversify": "^2.0.33",
 		"@types/jest": "^23.3.1",
-		"@types/jsonwebtoken": "^7.2.8",
+		"@types/jsonwebtoken": "^8.3.0",
 		"@types/kafka-node": "^2.0.6",
 		"@types/lodash": "^4.14.104",
 		"@types/method-override": "^0.0.31",
@@ -146,40 +146,40 @@
 		"@types/moment": "^2.13.0",
 		"@types/mongodb": "^3.1.2",
 		"@types/mongoose": "^5.2.17",
-		"@types/node": "^10.7.1",
+		"@types/node": "~10.12.15",
 		"@types/node-uuid": "^0.0.28",
 		"@types/passport": "^0.4.5",
 		"@types/passport-jwt": "^3.0.1",
 		"@types/redis": "^2.8.6",
-		"@types/reflect-metadata": "0.0.5",
+		"@types/reflect-metadata": "0.1.0",
 		"@types/request": "^2.47.0",
 		"@types/request-promise": "^4.1.41",
-		"@types/sinon": "^1.16.36",
-		"@types/socket.io": "^1.4.32",
+		"@types/sinon": "^7.0.0",
+		"@types/socket.io": "^2.1.2",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/source-map-support": "^0.4.0",
-		"@types/stripe": "^5.0.8",
+		"@types/stripe": "^6.0.4",
 		"@types/uuid": "^3.4.4",
-		"@types/ws": "^4.0.1",
+		"@types/ws": "^6.0.1",
 		"concurrently": "^4.0.1",
-		"conventional-changelog": "^1.1.15",
+		"conventional-changelog": "^3.0.5",
 		"core-js": "^2.5.7",
-		"coveralls": "^2.11.16",
-		"husky": "^1.0.1",
+		"coveralls": "^3.0.2",
+		"husky": "^1.2.0",
 		"jest": "^23.5.0",
 		"lerna": "^3.4.0",
 		"nodemon": "^1.18.7",
-		"nyc": "^10.1.2",
+		"nyc": "^13.1.0",
 		"prettier": "^1.11.1",
 		"require-directory": "^2.1.1",
 		"supertest": "^3.0.0",
 		"ts-jest": "^23.10.2",
 		"ts-loader": "^5.2.1",
-		"ts-node": "^7.0.1",
-		"tslint": "^5.11.0",
+		"ts-node": "7.0.1",
+		"tslint": "5.11.0",
 		"typedoc": "^0.13.0",
 		"typemoq": "^2.1.0",
-		"typescript": "^2.9.2",
+		"typescript": "~3.2.2",
 		"webpack": "^4.20.2",
 		"webpack-cli": "^3.1.1",
 		"webpack-command": "^0.4.1",
