--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -40,16 +40,16 @@
 	},
 	"dependencies": {
 		"@captemulation/get-parameter-names": "^1.2.0",
-		"@nestjs/common": "^5.3.9",
-		"@nestjs/core": "^5.3.10",
+		"@nestjs/common": "^5.5.0",
+		"@nestjs/core": "^5.5.0",
 		"@nestjs/cqrs": "^5.1.1",
-		"@nestjs/graphql": "^5.4.0",
-		"@nestjs/microservices": "5.5.0",
+		"@nestjs/graphql": "^3.0.0",
+		"@nestjs/microservices": "^5.5.0",
 		"@nestjs/passport": "^5.1.0",
 		"@nestjs/swagger": "^2.5.1",
-		"@nestjs/testing": "^5.3.8",
-		"@nestjs/websockets": "5.5.0",
-		"apollo-server-express": "^2.3.1",
+		"@nestjs/testing": "^5.5.0",
+		"@nestjs/websockets": "^5.5.0",
+		"apollo-server-express": "^1.2.0",
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.1",
 		"bluebird": "^3.5.1",
@@ -73,10 +73,10 @@
 		"express": "^4.16.3",
 		"express-handlebars": "^3.0.0",
 		"faker": "^4.1.0",
-		"graphql": "^14.0.2",
+		"graphql": "^0.11.7",
 		"graphql-playground-middleware-express": "^1.7.1",
-		"graphql-subscriptions": "^1.0.0",
-		"graphql-tools": "^4.0.3",
+		"graphql-subscriptions": "^0.5.6",
+		"graphql-tools": "^2.11.0",
 		"handlebars": "^4.0.11",
 		"image-size": "^0.6.2",
 		"install": "^0.12.2",
@@ -88,8 +88,9 @@
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.1.0",
 		"moment": "^2.21.0",
+		"mongodb": "^3.1.10",
 		"mongodb-memory-server": "^2.8.0",
-		"mongoose": "^5.2.4",
+		"mongoose": "^5.4.0",
 		"morgan": "^1.9.0",
 		"ms": "^2.1.1",
 		"node-uuid": "^1.4.8",
@@ -101,16 +102,16 @@
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
 		"passport-url": "^1.0.4",
-		"pm2": "^3.2.2",
+		"pm2": "^3.2.3",
 		"reflect-metadata": "^0.1.12",
 		"request": "^2.83.0",
 		"request-ip": "^2.1.1",
 		"request-promise": "^4.2.2",
-		"rxjs": "6.3.3",
-		"rxjs-compat": "6.3.3",
+		"rxjs": "^6.3.3",
+		"rxjs-compat": "^6.3.3",
 		"serve-favicon": "^2.4.5",
 		"socket.io": "~2.2.0",
-		"socket.io-client": "2.2.0",
+		"socket.io-client": "^2.2.0",
 		"source-map-support": "^0.5.3",
 		"stripe": "^6.12.1",
 		"subscriptions-transport-ws": "^0.9.15",
@@ -145,13 +146,13 @@
 		"@types/mkdirp": "^0.5.2",
 		"@types/moment": "^2.13.0",
 		"@types/mongodb": "^3.1.2",
-		"@types/mongoose": "^5.2.17",
-		"@types/node": "~10.12.15",
+		"@types/mongoose": "^5.3.5",
+		"@types/node": "^10.12.15",
 		"@types/node-uuid": "^0.0.28",
 		"@types/passport": "^0.4.5",
 		"@types/passport-jwt": "^3.0.1",
 		"@types/redis": "^2.8.6",
-		"@types/reflect-metadata": "0.1.0",
+		"@types/reflect-metadata": "^0.1.0",
 		"@types/request": "^2.47.0",
 		"@types/request-promise": "^4.1.41",
 		"@types/sinon": "^7.0.0",
@@ -168,26 +169,27 @@
 		"husky": "^1.2.0",
 		"jest": "^23.5.0",
 		"lerna": "^3.4.0",
-		"nodemon": "^1.18.7",
+		"nodemon": "^1.18.9",
 		"nyc": "^13.1.0",
 		"prettier": "^1.11.1",
 		"require-directory": "^2.1.1",
 		"supertest": "^3.0.0",
 		"ts-jest": "^23.10.2",
 		"ts-loader": "^5.2.1",
-		"ts-node": "7.0.1",
-		"tslint": "5.11.0",
+		"ts-node": "^7.0.1",
+		"tslint": "^5.11.0",
 		"typedoc": "^0.13.0",
 		"typemoq": "^2.1.0",
-		"typescript": "~3.2.2",
-		"webpack": "^4.20.2",
-		"webpack-cli": "^3.1.1",
-		"webpack-command": "^0.4.1",
+		"typescript": "^2.9.2",
+		"webpack": "^4.27.1",
+		"webpack-cli": "^3.1.2",
+		"webpack-command": "^0.4.2",
 		"webpack-graphql-loader": "^1.0.0",
-		"webpack-node-externals": "^1.7.2"
+		"webpack-node-externals": "^1.7.2",
+		"pretty-quick": "^1.8.0"
 	},
 	"engines": {
-		"node": ">=8.9.0",
+		"node": ">=10.14.2",
 		"yarn": ">=1.7.0"
 	},
 	"nyc": {
