--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -60,26 +60,26 @@
 		"@angular/compiler": "^7.1.3",
 		"@angular/core": "^7.1.3",
 		"@angular/forms": "^7.1.3",
-		"@angular/http": "~7.1.3",
+		"@angular/http": "^7.1.3",
 		"@angular/platform-browser": "^7.1.3",
 		"@angular/platform-browser-dynamic": "^7.1.3",
 		"@angular/router": "^7.1.3",
-		"@asymmetrik/ngx-leaflet": "5.0.1",
-		"@nebular/auth": "3.0.1",
-		"@nebular/bootstrap": "3.0.1",
-		"@nebular/security": "3.0.1",
-		"@nebular/theme": "3.0.1",
+		"@asymmetrik/ngx-leaflet": "^5.0.1",
+		"@nebular/auth": "^3.0.1",
+		"@nebular/bootstrap": "^3.0.1",
+		"@nebular/security": "^3.0.1",
+		"@nebular/theme": "^3.0.1",
 		"@ng-bootstrap/ng-bootstrap": "^4.0.0",
-		"@ngx-translate/core": "11.0.1",
-		"@ngx-translate/http-loader": "4.0.0",
+		"@ngx-translate/core": "^11.0.1",
+		"@ngx-translate/http-loader": "^4.0.0",
 		"@swimlane/ngx-charts": "^10.0.0",
 		"angular-2-dropdown-multiselect": "^1.8.0",
-		"angular-tree-component": "8.0.2",
-		"angular2-chartjs": "0.5.1",
+		"angular-tree-component": "^8.0.2",
+		"angular2-chartjs": "^0.5.1",
 		"angular2-logger": "^0.7.0",
 		"angular2-toaster": "^7.0.0",
 		"angular2-wizard": "github:maiyaporn/angular2-wizard#pull/56/head",
-		"apollo-angular": "1.5.0",
+		"apollo-angular": "^1.1.0",
 		"apollo-angular-link-http": "^1.1.0",
 		"apollo-cache-inmemory": "^1.2.2",
 		"apollo-client": "^2.3.2",
@@ -89,23 +89,23 @@
 		"apollo-upload-client": "^9.1.0",
 		"bootstrap": "^4.1.2",
 		"buffer": "^5.1.0",
-		"chart.js": "2.7.3",
-		"ckeditor": "4.11.1",
+		"chart.js": "^2.7.3",
+		"ckeditor": "^4.11.1",
 		"classlist.js": "1.1.20150312",
-		"core-js": "2.6.0",
+		"core-js": "^2.6.0",
 		"echarts": "^4.0.2",
 		"faker": "^4.1.0",
 		"fingerprintjs2": "^1.8.1",
 		"font-awesome": "^4.7.0",
 		"global": "^4.3.2",
-		"graphql": "^14.0.2",
+		"graphql": "^0.13.2",
 		"graphql-tag": "^2.9.2",
-		"highlight.js": "^9.12.0",
+		"highlight.js": "^9.13.1",
 		"intl": "1.2.5",
-		"ionicons": "~4.5.0",
+		"ionicons": "^4.5.0",
 		"is-url": "^1.2.4",
 		"jquery": "^3.3.1",
-		"leaflet": "1.3.4",
+		"leaflet": "^1.3.4",
 		"nebular-icons": "1.1.0",
 		"ng-simple-slideshow": "^1.2.5",
 		"ng2-ckeditor": "^1.2.2",
@@ -115,17 +115,17 @@
 		"ng2-smart-table": "1.3.5",
 		"ng2-tree": "^2.0.0-rc.11",
 		"ngx-echarts": "^4.0.1",
-		"ngx-highlightjs": "^3.0.0",
+		"ngx-highlightjs": "^2.1.1",
 		"node-uuid": "^1.4.8",
-		"normalize.css": "8.0.1",
+		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
 		"popper.js": "^1.14.3",
 		"reflect-metadata": "^0.1.12",
-		"roboto-fontface": "0.10.0",
-		"rxjs": "6.3.3",
-		"rxjs-compat": "6.3.3",
+		"roboto-fontface": "^0.10.0",
+		"rxjs": "^6.3.3",
+		"rxjs-compat": "^6.3.3",
 		"socicon": "3.0.5",
-		"socket.io-client": "2.2.0",
+		"socket.io-client": "^2.2.0",
 		"stripe": "^6.2.1",
 		"subscriptions-transport-ws": "^0.9.12",
 		"tinymce": "^4.8.0",
@@ -133,47 +133,52 @@
 		"typeface-exo": "^0.0.61",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
-		"webpack": "^4.27.1",
+		"webpack": "^3.11.0",
 		"zen-observable": "^0.8.8",
 		"zone.js": "^0.8.26"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.11.3",
+		"@angular-devkit/build-angular": "^0.11.3",
 		"@angular/compiler-cli": "^7.1.3",
 		"@angular/cli": "^7.1.3",
 		"@angular/language-service": "^7.1.3",
 		"@compodoc/compodoc": "^1.1.5",
 		"@types/async": "^2.0.31",
-		"@types/d3-color": "1.2.1",
+		"@types/d3-color": "^1.2.1",
 		"@types/faker": "^4.1.2",
-		"@types/googlemaps": "3.30.16",
-		"@types/jasmine": "3.3.1",
-		"@types/jasminewd2": "2.0.6",
-		"@types/leaflet": "1.2.14",
+		"@types/googlemaps": "^3.30.16",
+		"@types/jasmine": "^3.3.1",
+		"@types/jasminewd2": "^2.0.6",
+		"@types/leaflet": "^1.2.14",
 		"@types/mongodb": "^3.1.2",
 		"@types/mongoose": "^5.2.17",
-		"@types/node": "~10.12.15",
+		"@types/node": "^10.12.15",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/stripe": "^6.0.4",
 		"@types/uuid": "^3.4.4",
+		"@types/highlight.js": "^9.12.3",
 		"codelyzer": "^4.5.0",
-		"conventional-changelog-cli": "2.0.11",
+		"conventional-changelog-cli": "^2.0.11",
 		"husky": "^1.2.0",
-		"jasmine-core": "~3.3.0",
-		"jasmine-spec-reporter": "4.2.1",
+		"jasmine-core": "^3.3.0",
+		"jasmine-spec-reporter": "^4.2.1",
 		"karma": "^3.1.3",
 		"karma-chrome-launcher": "^2.2.0",
 		"karma-cli": "^2.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.4",
 		"karma-jasmine": "^2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.0",
-		"npm-run-all": "4.1.5",
-		"protractor": "5.4.1",
-		"rimraf": "2.6.2",
-		"stylelint": "9.9.0",
-		"ts-node": "7.0.1",
-		"tslint": "5.11.0",
+		"npm-run-all": "^4.1.5",
+		"protractor": "^5.4.1",
+		"rimraf": "^2.6.2",
+		"stylelint": "^9.9.0",
+		"ts-node": "^7.0.1",
+		"tslint": "^5.11.0",
 		"tslint-language-service": "^0.9.9",
-		"typescript": "~3.2.2"
+		"typescript": "3.1.3"
+	},
+	"engines": {
+		"node": ">=10.14.2",
+		"yarn": ">=1.7.0"
 	}
 }
