--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -101,120 +101,120 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.3",
-		"@angular/animations": "^7.1.3",
-		"@angular/cdk": "^7.1.1",
-		"@angular/common": "^7.1.3",
-		"@angular/compiler": "^7.1.3",
-		"@angular/core": "^7.1.3",
-		"@angular/forms": "^7.1.3",
-		"@angular/material": "^7.1.1",
-		"@angular/platform-browser": "^7.1.3",
-		"@angular/platform-browser-dynamic": "^7.1.3",
-		"@angular/platform-server": "^7.1.3",
-		"@angular/router": "^7.1.3",
-		"@fortawesome/angular-fontawesome": "^0.3.0",
+		"@angular/animations": "^6.0.6",
+		"@angular/cdk": "^6.4.7",
+		"@angular/common": "^6.0.6",
+		"@angular/compiler": "^6.0.6",
+		"@angular/core": "^6.0.6",
+		"@angular/forms": "^6.0.6",
+		"@angular/material": "^6.4.2",
+		"@angular/platform-browser": "^6.0.6",
+		"@angular/platform-browser-dynamic": "^6.0.6",
+		"@angular/platform-server": "^6.0.6",
+		"@angular/router": "^6.0.6",
+		"@fortawesome/angular-fontawesome": "^0.1.1",
 		"@fortawesome/fontawesome-svg-core": "^1.2.2",
 		"@fortawesome/free-brands-svg-icons": "^5.2.0",
 		"@fortawesome/free-regular-svg-icons": "^5.2.0",
-		"@ngx-translate/core": "11.0.1",
-		"@ngx-translate/http-loader": "4.0.0",
+		"@ngx-translate/core": "10.0.2",
+		"@ngx-translate/http-loader": "2.0.1",
 		"@types/googlemaps": "^3.30.16",
 		"angular2-logger": "^0.7.0",
 		"bootstrap": "^4.1.3",
 		"bson-objectid": "^1.2.2",
 		"classlist.js": "^1.1.20150312",
-		"core-js": "2.6.0",
-		"css-element-queries": "^1.1.1",
+		"core-js": "^2.5.7",
+		"css-element-queries": "^0.4.0",
 		"hammerjs": "^2.0.8",
 		"http-server": "^0.11.1",
 		"ie-shim": "^0.1.0",
 		"masonry-layout": "^4.2.0",
 		"mdi-svg": "^2.1.19",
-		"ng-lazyload-image": "^5.0.0",
+		"ng-lazyload-image": "^4.0.0",
 		"node-uuid": "^1.4.8",
 		"reflect-metadata": "^0.1.12",
-		"rxjs": "6.3.3",
-		"rxjs-compat": "6.3.3",
+		"rxjs": "^6.2.2",
+		"rxjs-compat": "^6.2.2",
 		"sass": "^1.3.0",
 		"sass-extract": "^2.0.0",
 		"sass-extract-loader": "^1.1.0",
-		"socket.io-client": "2.2.0",
+		"socket.io-client": "2.1.1",
 		"stripe": "^6.5.0",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
 		"zone.js": "^0.8.26"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-optimizer": "^0.11.3",
-		"@angular/cli": "^7.1.3",
-		"@angular/compiler-cli": "^7.1.3",
-		"@angular/language-service": "^7.1.3",
+		"@angular-devkit/build-optimizer": "^0.6.8",
+		"@angular/cli": "^6.0.8",
+		"@angular/compiler-cli": "^6.0.6",
+		"@angular/language-service": "^6.0.6",
 		"@compodoc/compodoc": "^1.1.3",
-		"@ngtools/webpack": "^7.1.3",
+		"@ngtools/webpack": "^6.2.1",
 		"@types/hammerjs": "^2.0.35",
-		"@types/jasmine": "3.3.1",
+		"@types/jasmine": "^2.8.8",
 		"@types/mongoose": "^5.2.17",
-		"@types/node": "~10.12.15",
+		"@types/node": "^10.3.5",
 		"@types/node-uuid": "^0.0.28",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/source-map": "^0.5.2",
-		"@types/stripe": "^6.0.4",
+		"@types/stripe": "^5.0.19",
 		"@types/stripe-node": "^4.7.1",
 		"@types/uglify-js": "^3.0.2",
 		"@types/uuid": "^3.4.4",
 		"@types/webpack": "^4.4.8",
-		"add-asset-html-webpack-plugin": "^3.1.2",
+		"add-asset-html-webpack-plugin": "^2.1.3",
 		"angular2-template-loader": "^0.6.2",
 		"assets-webpack-plugin": "^3.8.4",
 		"awesome-typescript-loader": "^5.2.0",
 		"codelyzer": "^4.3.0",
 		"copy-webpack-plugin": "^4.5.1",
 		"cross-env": "^5.2.0",
-		"css-loader": "^2.0.0",
+		"css-loader": "^0.28.11",
 		"exports-loader": "^0.7.0",
 		"expose-loader": "^0.7.5",
 		"extract-text-webpack-plugin": "~3.0.2",
-		"file-loader": "^2.0.0",
+		"file-loader": "^1.1.11",
 		"find-root": "^1.1.0",
-		"gh-pages": "^2.0.1",
+		"gh-pages": "^1.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"imports-loader": "^0.8.0",
 		"istanbul-instrumenter-loader": "^3.0.1",
-		"jasmine-core": "~3.3.0",
+		"jasmine-core": "^3.1.0",
 		"json-loader": "^0.5.7",
-		"karma": "^3.1.3",
+		"karma": "^2.0.4",
 		"karma-chrome-launcher": "^2.2.0",
 		"karma-coverage": "^1.1.2",
-		"karma-jasmine": "^2.0.1",
+		"karma-jasmine": "^1.1.2",
 		"karma-mocha-reporter": "^2.2.5",
 		"karma-remap-coverage": "^0.1.5",
 		"karma-sourcemap-loader": "^0.3.7",
 		"karma-webpack": "^3.0.0",
-		"mini-css-extract-plugin": "^0.5.0",
+		"mini-css-extract-plugin": "^0.4.0",
 		"ng-router-loader": "^2.1.0",
 		"ngc-webpack": "~4.1.2",
 		"node-sass": "^4.9.0",
-		"npm-run-all": "4.1.5",
+		"npm-run-all": "^4.1.3",
 		"optimize-js-plugin": "^0.0.4",
 		"parse5": "^5.0.0",
-		"preload-webpack-plugin": "^2.3.0",
-		"protractor": "5.4.1",
-		"raw-loader": "^1.0.0",
-		"rimraf": "2.6.2",
+		"preload-webpack-plugin": "^1.2.2",
+		"protractor": "^5.4.0",
+		"raw-loader": "^0.5.1",
+		"rimraf": "^2.6.2",
 		"rxjs-tslint": "^0.1.5",
 		"sass-loader": "^7.0.3",
 		"script-ext-html-webpack-plugin": "^2.0.1",
 		"source-map-loader": "^0.2.3",
 		"string-replace-loader": "^2.1.1",
-		"style-loader": "^0.23.1",
+		"style-loader": "^0.21.0",
 		"to-string-loader": "^1.1.5",
-		"ts-node": "7.0.1",
+		"ts-node": "^7.0.0",
 		"tslib": "^1.9.3",
-		"tslint": "5.11.0",
+		"tslint": "^5.10.0",
 		"tslint-loader": "^3.6.0",
 		"typedoc": "^0.13.0",
-		"typescript": "~3.2.2",
-		"uglifyjs-webpack-plugin": "^2.0.1",
+		"typescript": "~2.7.2",
+		"uglifyjs-webpack-plugin": "^1.2.6",
 		"url-loader": "^1.0.1",
 		"webpack": "^4.17.2",
 		"webpack-cli": "^3.0.8",
