--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -69,7 +69,7 @@
 		"envalid": "^4.1.4",
 		"errorhandler": "^1.5.0",
 		"etag": "^1.8.1",
-		"event-stream": "^4.0.1",
+		"event-stream": "3.3.4",
 		"express": "^4.16.3",
 		"express-handlebars": "^3.0.0",
 		"faker": "^4.1.0",
