--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -50,134 +50,139 @@
 		"e2e": "ng e2e",
 		"docs": "compodoc -p src/tsconfig.app.json -d docs",
 		"docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-		"release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+		"release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+		"storybook": "start-storybook -p 9001 -c .storybook"
 	},
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.5",
-		"@angular/animations": "^7.1.4",
-		"@angular/cdk": "^7.2.0",
-		"@angular/common": "^7.1.4",
-		"@angular/compiler": "^7.1.4",
-		"@angular/core": "^7.1.4",
-		"@angular/forms": "^7.1.4",
-		"@angular/http": "^7.1.4",
-		"@angular/platform-browser": "^7.1.4",
-		"@angular/platform-browser-dynamic": "^7.1.4",
-		"@angular/router": "^7.1.4",
+		"@angular/animations": "^7.2.0",
+		"@angular/cdk": "^7.2.1",
+		"@angular/common": "^7.2.0",
+		"@angular/compiler": "^7.2.0",
+		"@angular/core": "^7.2.0",
+		"@angular/forms": "^7.2.0",
+		"@angular/http": "^7.2.0",
+		"@angular/platform-browser": "^7.2.0",
+		"@angular/platform-browser-dynamic": "^7.2.0",
+		"@angular/router": "^7.2.0",
 		"@asymmetrik/ngx-leaflet": "^5.0.1",
 		"@fortawesome/fontawesome-free": "^5.6.3",
-		"@nebular/auth": "^3.0.1",
-		"@nebular/bootstrap": "^3.0.1",
-		"@nebular/security": "^3.0.1",
-		"@nebular/theme": "^3.0.1",
-		"@ng-bootstrap/ng-bootstrap": "^4.0.0",
+		"@nebular/auth": "^3.1.0",
+		"@nebular/bootstrap": "^3.1.0",
+		"@nebular/security": "^3.1.0",
+		"@nebular/theme": "^3.1.0",
+		"@ng-bootstrap/ng-bootstrap": "^4.0.1",
 		"@ngx-translate/core": "^11.0.1",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"@swimlane/ngx-charts": "^10.0.0",
-		"angular-2-dropdown-multiselect": "^1.8.0",
-		"angular-tree-component": "^8.0.2",
+		"angular-2-dropdown-multiselect": "^1.8.1",
+		"angular-tree-component": "^8.2.0",
 		"angular2-chartjs": "^0.5.1",
 		"angular2-logger": "^0.7.0",
 		"angular2-toaster": "^7.0.0",
 		"angular2-wizard": "github:maiyaporn/angular2-wizard#pull/56/head",
-		"apollo-angular": "^1.1.0",
-		"apollo-angular-link-http": "^1.1.0",
-		"apollo-cache-inmemory": "^1.2.2",
-		"apollo-client": "^2.3.2",
-		"apollo-link": "^1.2.2",
-		"apollo-link-context": "^1.0.8",
-		"apollo-link-ws": "^1.0.8",
-		"apollo-upload-client": "^9.1.0",
-		"bootstrap": "^4.1.2",
-		"buffer": "^5.1.0",
+		"apollo-angular": "^1.5.0",
+		"apollo-angular-link-http": "^1.4.0",
+		"apollo-cache-inmemory": "^1.3.12",
+		"apollo-client": "^2.4.8",
+		"apollo-link": "^1.2.6",
+		"apollo-link-context": "^1.0.12",
+		"apollo-link-ws": "^1.0.12",
+		"apollo-upload-client": "^10.0.0",
+		"bootstrap": "^4.2.1",
+		"buffer": "^5.2.1",
 		"chart.js": "^2.7.3",
-		"ckeditor": "^4.11.1",
+		"ckeditor": "^4.11.2",
 		"classlist.js": "1.1.20150312",
-		"core-js": "^2.6.0",
+		"core-js": "^2.6.2",
 		"cryptiles": "^4.1.3",
-		"echarts": "^4.1.0",
+		"echarts": "^4.2.0-rc.2",
 		"eva-icons": "^1.1.1",
 		"faker": "^4.1.0",
-		"fingerprintjs2": "^1.8.1",
+		"fingerprintjs2": "^2.0.6",
 		"global": "^4.3.2",
-		"graphql": "^0.13.2",
-		"graphql-tag": "^2.9.2",
+		"graphql": "^14.0.2",
+		"graphql-tag": "^2.10.0",
 		"highlight.js": "^9.13.1",
 		"intl": "1.2.5",
-		"ionicons": "^4.5.0",
+		"ionicons": "^4.5.1",
 		"is-url": "^1.2.4",
 		"jquery": "^3.3.1",
-		"leaflet": "^1.3.4",
+		"leaflet": "^1.4.0",
 		"moment": "^2.23.0",
 		"nebular-icons": "1.1.0",
-		"ng-simple-slideshow": "^1.2.5",
+		"ng-simple-slideshow": "^1.2.6",
 		"ng2-ckeditor": "^1.2.2",
 		"ng2-completer": "2.0.8",
 		"ng2-file-upload": "^1.3.0",
 		"ng2-simple-timer": "^6.0.0",
 		"ng2-smart-table": "1.3.5",
 		"ng2-tree": "^2.0.0-rc.11",
-		"ngx-echarts": "^4.0.1",
+		"ngx-echarts": "^4.1.0",
 		"ngx-highlightjs": "^2.1.1",
 		"ngx-moment": "^3.3.0",
 		"node-sass": "^4.11.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
-		"popper.js": "^1.14.3",
+		"popper.js": "^1.14.6",
 		"reflect-metadata": "^0.1.12",
 		"roboto-fontface": "^0.10.0",
 		"rxjs": "^6.3.3",
 		"rxjs-compat": "^6.3.3",
 		"socicon": "3.0.5",
 		"socket.io-client": "^2.2.0",
-		"stripe": "^6.2.1",
-		"subscriptions-transport-ws": "^0.9.12",
-		"tinymce": "^4.8.0",
-		"tslib": "^1.8.0",
+		"stripe": "^6.20.0",
+		"subscriptions-transport-ws": "^0.9.15",
+		"tinymce": "^4.9.2",
+		"tslib": "^1.9.3",
 		"typeface-exo": "^0.0.61",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
 		"webpack": "^3.11.0",
-		"zen-observable": "^0.8.8",
-		"zone.js": "^0.8.26"
+		"zen-observable": "^0.8.11",
+		"zone.js": "^0.8.27"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^0.11.3",
-		"@angular/cli": "^7.1.4",
-		"@angular/compiler-cli": "^7.1.4",
-		"@angular/language-service": "^7.1.4",
+		"@angular-devkit/build-angular": "^0.12.1",
+		"@angular/cli": "^7.2.1",
+		"@angular/compiler-cli": "^7.2.0",
+		"@angular/language-service": "^7.2.0",
+		"@babel/core": "^7.2.2",
 		"@compodoc/compodoc": "^1.1.7",
-		"@types/async": "^2.0.31",
+		"@storybook/angular": "^4.1.6",
+		"@storybook/addon-actions": "^4.1.6",
+		"@types/async": "^2.0.50",
 		"@types/d3-color": "^1.2.1",
-		"@types/faker": "^4.1.2",
+		"@types/faker": "^4.1.4",
 		"@types/googlemaps": "^3.30.16",
 		"@types/highlight.js": "^9.12.3",
-		"@types/jasmine": "^3.3.1",
+		"@types/jasmine": "^3.3.5",
 		"@types/jasminewd2": "^2.0.6",
 		"@types/leaflet": "^1.2.14",
-		"@types/mongodb": "^3.1.2",
-		"@types/mongoose": "^5.2.17",
-		"@types/node": "^10.12.15",
+		"@types/mongodb": "^3.1.18",
+		"@types/mongoose": "^5.3.7",
+		"@types/node": "^10.12.18",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/stripe": "^6.0.4",
+		"@types/stripe": "^6.19.1",
 		"@types/uuid": "^3.4.4",
+		"babel-loader": "^8.0.5",
 		"codelyzer": "^4.5.0",
 		"conventional-changelog-cli": "^2.0.11",
-		"husky": "^1.2.0",
+		"husky": "^1.3.1",
 		"jasmine-core": "^3.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
-		"karma": "^3.1.3",
+		"karma": "^3.1.4",
 		"karma-chrome-launcher": "^2.2.0",
 		"karma-cli": "^2.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.4",
 		"karma-jasmine": "^2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.0",
 		"npm-run-all": "^4.1.5",
-		"protractor": "^5.4.1",
-		"rimraf": "^2.6.2",
+		"protractor": "^5.4.2",
+		"rimraf": "^2.6.3",
 		"stylelint": "^9.9.0",
 		"ts-node": "^7.0.1",
-		"tslint": "^5.12.0",
+		"tslint": "^5.12.1",
 		"tslint-language-service": "^0.9.9",
 		"typescript": "~3.1.6"
 	},
