--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -48,6 +48,7 @@
 		"@nestjs/passport": "^5.1.0",
 		"@nestjs/swagger": "^2.5.1",
 		"@nestjs/testing": "^5.5.0",
+		"@nestjs/typeorm": "^5.2.2",
 		"@nestjs/websockets": "^5.5.0",
 		"apollo-server-express": "^2.3.1",
 		"axios": "^0.18.0",
@@ -64,6 +65,7 @@
 		"core-decorators": "^0.20.0",
 		"cors": "^2.8.5",
 		"cross-env": "^5.2.0",
+		"cryptiles": "^4.1.3",
 		"destroy": "^1.0.4",
 		"dotenv": "^6.2.0",
 		"envalid": "^4.1.4",
@@ -94,7 +96,6 @@
 		"morgan": "^1.9.1",
 		"ms": "^2.1.1",
 		"node-sass": "^4.11.0",
-		"cryptiles": "^4.1.3",
 		"on-finished": "^2.3.0",
 		"passport": "^0.4.0",
 		"passport-facebook": "^2.1.1",
@@ -118,6 +119,7 @@
 		"subscriptions-transport-ws": "^0.9.15",
 		"symbol": "^0.3.1",
 		"symbol-observable": "^1.2.0",
+		"typeorm": "^0.2.11",
 		"typescript-collections": "^1.3.2",
 		"underscore.string": "^3.3.5",
 		"upath": "^1.1.0",
@@ -139,7 +141,7 @@
 		"@types/google-maps": "^3.2.0",
 		"@types/handlebars": "^4.0.40",
 		"@types/inversify": "^2.0.33",
-		"@types/jest": "^23.3.1",
+		"@types/jest": "^23.3.12",
 		"@types/jsonwebtoken": "^8.3.0",
 		"@types/kafka-node": "^2.0.7",
 		"@types/lodash": "^4.14.119",
@@ -172,6 +174,7 @@
 		"nodemon": "^1.18.9",
 		"nyc": "^13.1.0",
 		"prettier": "^1.15.3",
+		"pretty-quick": "^1.8.0",
 		"require-directory": "^2.1.1",
 		"supertest": "^3.3.0",
 		"ts-jest": "^23.10.5",
@@ -180,13 +183,12 @@
 		"tslint": "^5.12.0",
 		"typedoc": "^0.14.0",
 		"typemoq": "^2.1.0",
+		"typescript": "~3.1.6",
 		"webpack": "^4.28.3",
 		"webpack-cli": "^3.2.0",
 		"webpack-command": "^0.4.2",
 		"webpack-graphql-loader": "^1.0.0",
-		"webpack-node-externals": "^1.7.2",
-		"pretty-quick": "^1.8.0",
-		"typescript": "~3.1.6"
+		"webpack-node-externals": "^1.7.2"
 	},
 	"engines": {
 		"node": ">=10.14.2",
