--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
 	"resolutions": {},
 	"dependencies": {
 		"@angular/core": "^7.1.4",
+		"@nestjs/typeorm": "^5.2.2",
 		"angular2-logger": "^0.7.0",
 		"npm": "^6.5.0",
 		"rxjs": "^6.3.3",
 		"rxjs-compat": "^6.3.3",
 		"socket.io-client": "^2.2.0",
 		"stripe": "^6.20.0",
+		"typeorm": "^0.2.11",
 		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
@@ -69,6 +71,7 @@
 		"@types/socket.io-client": "^1.4.32",
 		"@types/stripe": "^6.19.1",
 		"@types/uuid": "^3.4.4",
+		"@types/jest": "^23.3.12",
 		"codelyzer": "^4.5.0",
 		"concurrently": "^4.1.0",
 		"husky": "^1.3.1",
