--- a/backend/api/.env.template
+++ b/backend/api/.env.template
@@ -50,6 +50,8 @@ ARCGIS_CLIENT_SECRET=[SOME SORT OF STRING SECRET]
 WEB_MEMORY=4096
 WEB_CONCURRENCY=1
 
+IP_STACK_API_KEY=[IP_STACK_SERVICE_API_KEY_VALUE]
+
 LOG_LEVEL= trace|debug|info|warn|error|fatal
 
 # Apollo Engine Key (optional, see https://www.apollographql.com/docs/platform/schema-registry)
