--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -58,28 +58,28 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.5",
-		"@angular/animations": "^7.2.0",
-		"@angular/cdk": "^7.2.1",
-		"@angular/common": "^7.2.0",
-		"@angular/compiler": "^7.2.0",
-		"@angular/core": "^7.2.0",
-		"@angular/forms": "^7.2.0",
-		"@angular/http": "^7.2.0",
-		"@angular/platform-browser": "^7.2.0",
-		"@angular/platform-browser-dynamic": "^7.2.0",
-		"@angular/router": "^7.2.0",
+		"@angular/animations": "^7.2.4",
+		"@angular/cdk": "^7.3.2",
+		"@angular/common": "^7.2.4",
+		"@angular/compiler": "^7.2.4",
+		"@angular/core": "^7.2.4",
+		"@angular/forms": "^7.2.4",
+		"@angular/http": "^7.2.4",
+		"@angular/platform-browser": "^7.2.4",
+		"@angular/platform-browser-dynamic": "^7.2.4",
+		"@angular/router": "^7.2.4",
 		"@asymmetrik/ngx-leaflet": "^5.0.1",
-		"@fortawesome/fontawesome-free": "^5.6.3",
-		"@nebular/auth": "^3.1.0",
-		"@nebular/bootstrap": "^3.1.0",
-		"@nebular/security": "^3.1.0",
-		"@nebular/theme": "^3.1.0",
-		"@ng-bootstrap/ng-bootstrap": "^4.0.1",
+		"@fortawesome/fontawesome-free": "^5.7.2",
+		"@nebular/auth": "^3.2.1",
+		"@nebular/bootstrap": "^3.2.1",
+		"@nebular/security": "^3.2.1",
+		"@nebular/theme": "^3.2.1",
+		"@ng-bootstrap/ng-bootstrap": "^4.0.3",
 		"@ng-select/ng-select": "^2.15.3",
 		"@ngx-translate/core": "^11.0.1",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"@swimlane/ngx-charts": "^10.0.0",
-		"angular-2-dropdown-multiselect": "^1.8.1",
+		"angular-2-dropdown-multiselect": "^1.9.0",
 		"angular-tree-component": "^8.2.0",
 		"angular2-chartjs": "^0.5.1",
 		"angular2-logger": "^0.7.0",
@@ -87,35 +87,35 @@
 		"angular2-wizard": "github:maiyaporn/angular2-wizard#pull/56/head",
 		"apollo-angular": "^1.5.0",
 		"apollo-angular-link-http": "^1.4.0",
-		"apollo-cache-inmemory": "^1.3.12",
-		"apollo-client": "^2.4.8",
-		"apollo-link": "^1.2.6",
-		"apollo-link-context": "^1.0.12",
-		"apollo-link-ws": "^1.0.12",
+		"apollo-cache-inmemory": "^1.4.3",
+		"apollo-client": "^2.4.13",
+		"apollo-link": "^1.2.8",
+		"apollo-link-context": "^1.0.14",
+		"apollo-link-ws": "^1.0.14",
 		"apollo-upload-client": "^10.0.0",
-		"bootstrap": "^4.2.1",
+		"bootstrap": "^4.3.1",
 		"buffer": "^5.2.1",
 		"chart.js": "^2.7.3",
 		"ckeditor": "^4.11.2",
 		"classlist.js": "1.1.20150312",
-		"core-js": "^2.6.2",
+		"core-js": "^2.6.4",
 		"cryptiles": "^4.1.3",
-		"echarts": "^4.2.0-rc.2",
+		"echarts": "^4.2.1-rc.1",
 		"eva-icons": "^1.1.1",
 		"faker": "^4.1.0",
 		"fingerprintjs2": "^2.0.6",
 		"global": "^4.3.2",
-		"graphql": "^14.0.2",
-		"graphql-tag": "^2.10.0",
-		"highlight.js": "^9.13.1",
+		"graphql": "^14.1.1",
+		"graphql-tag": "^2.10.1",
+		"highlight.js": "^9.14.2",
 		"intl": "1.2.5",
-		"ionicons": "^4.5.1",
+		"ionicons": "^4.5.5",
 		"is-url": "^1.2.4",
 		"jquery": "^3.3.1",
 		"leaflet": "^1.4.0",
-		"moment": "^2.23.0",
+		"moment": "^2.24.0",
 		"nebular-icons": "1.1.0",
-		"ng-simple-slideshow": "^1.2.6",
+		"ng-simple-slideshow": "^1.2.8",
 		"ng2-ckeditor": "^1.2.2",
 		"ng2-completer": "2.0.8",
 		"ng2-file-upload": "^1.3.0",
@@ -123,63 +123,63 @@
 		"ng2-smart-table": "1.3.5",
 		"ng2-tree": "^2.0.0-rc.11",
 		"ngx-echarts": "^4.1.0",
-		"ngx-highlightjs": "^2.1.1",
+		"ngx-highlightjs": "^2.1.4",
 		"ngx-moment": "^3.3.0",
 		"node-sass": "^4.11.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
-		"popper.js": "^1.14.6",
-		"reflect-metadata": "^0.1.12",
+		"popper.js": "^1.14.7",
+		"reflect-metadata": "^0.1.13",
 		"roboto-fontface": "^0.10.0",
-		"rxjs": "^6.3.3",
-		"rxjs-compat": "^6.3.3",
+		"rxjs": "^6.4.0",
+		"rxjs-compat": "^6.4.0",
 		"socicon": "3.0.5",
 		"socket.io-client": "^2.2.0",
-		"stripe": "^6.20.0",
+		"stripe": "^6.25.0",
 		"subscriptions-transport-ws": "^0.9.15",
-		"tinymce": "^4.9.2",
+		"tinymce": "^5.0.0",
 		"tslib": "^1.9.3",
 		"typeface-exo": "^0.0.61",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
-		"webpack": "^3.11.0",
-		"zen-observable": "^0.8.11",
-		"zone.js": "^0.8.27"
+		"webpack": "^4.29.3",
+		"zen-observable": "^0.8.13",
+		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^0.12.1",
-		"@angular/cli": "^7.2.1",
-		"@angular/compiler-cli": "^7.2.0",
-		"@angular/language-service": "^7.2.0",
+		"conventional-changelog-cli": "^2.0.11",
+		"@angular-devkit/build-angular": "^0.13.1",
+		"@angular/cli": "^7.3.1",
+		"@angular/compiler-cli": "^7.2.4",
+		"@angular/language-service": "^7.2.4",
 		"@babel/core": "^7.2.2",
-		"@compodoc/compodoc": "^1.1.7",
-		"@storybook/addon-actions": "^4.1.6",
-		"@storybook/angular": "^4.1.6",
-		"@types/async": "^2.0.50",
-		"@types/d3-color": "^1.2.1",
-		"@types/faker": "^4.1.4",
+		"@compodoc/compodoc": "^1.1.8",
+		"@storybook/addon-actions": "^4.1.11",
+		"@storybook/angular": "^4.1.11",
+		"@types/async": "^2.4.1",
+		"@types/d3-color": "^1.2.2",
+		"@types/faker": "^4.1.5",
 		"@types/googlemaps": "^3.30.16",
 		"@types/highlight.js": "^9.12.3",
-		"@types/jasmine": "^3.3.5",
+		"@types/jasmine": "^3.3.9",
 		"@types/jasminewd2": "^2.0.6",
-		"@types/leaflet": "^1.2.14",
-		"@types/mongodb": "^3.1.18",
-		"@types/mongoose": "^5.3.7",
+		"@types/leaflet": "^1.4.2",
+		"@types/mongodb": "^3.1.19",
+		"@types/mongoose": "^5.3.16",
 		"@types/node": "^11.9.3",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/stripe": "^6.19.1",
+		"@types/stripe": "^6.19.7",
 		"@types/uuid": "^3.4.4",
-		"@types/yargs": "^12.0.8",
+		"@types/yargs": "^12.0.9",
 		"babel-loader": "^8.0.5",
 		"codelyzer": "^4.5.0",
-		"conventional-changelog-cli": "^2.0.11",
 		"cross-env": "^5.2.0",
 		"dotenv": "^6.2.0",
-		"envalid": "^4.2.1",
+		"envalid": "^4.2.2",
 		"husky": "^1.3.1",
 		"jasmine-core": "^3.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
-		"karma": "^3.1.4",
+		"karma": "^4.0.0",
 		"karma-chrome-launcher": "^2.2.0",
 		"karma-cli": "^2.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.4",
@@ -189,12 +189,12 @@
 		"protractor": "^5.4.2",
 		"rimraf": "^2.6.3",
 		"rxjs-tslint": "0.1.5",
-		"stylelint": "^9.9.0",
-		"ts-node": "^7.0.1",
+		"stylelint": "^9.10.1",
+		"ts-node": "^8.0.2",
 		"tslint": "^5.12.1",
 		"tslint-language-service": "^0.9.9",
-		"typescript": "~3.1.6",
-		"yargs": "^12.0.5"
+		"yargs": "^13.1.0",
+		"typescript": "~3.1.6"
 	},
 	"engines": {
 		"node": ">=10.15.0",
