chore: packages updates

--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -103,90 +103,91 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.5",
-		"@angular/animations": "^7.2.4",
-		"@angular/cdk": "^7.3.1",
-		"@angular/common": "^7.2.4",
-		"@angular/compiler": "^7.2.4",
-		"@angular/core": "^7.2.4",
-		"@angular/forms": "^7.2.4",
-		"@angular/material": "^7.3.1",
-		"@angular/platform-browser": "^7.2.4",
-		"@angular/platform-browser-dynamic": "^7.2.4",
-		"@angular/platform-server": "^7.2.4",
-		"@angular/router": "^7.2.4",
-		"@angular/service-worker": "^7.2.4",
+		"@angular/animations": "^7.2.7",
+		"@angular/cdk": "^7.3.3",
+		"@angular/common": "^7.2.7",
+		"@angular/compiler": "^7.2.7",
+		"@angular/core": "^7.2.7",
+		"@angular/forms": "^7.2.7",
+		"@angular/material": "^7.3.3",
+		"@angular/platform-browser": "^7.2.7",
+		"@angular/platform-browser-dynamic": "^7.2.7",
+		"@angular/platform-server": "^7.2.7",
+		"@angular/router": "^7.2.7",
+		"@angular/service-worker": "^7.2.7",
 		"@fortawesome/angular-fontawesome": "^0.3.0",
-		"@fortawesome/fontawesome-free": "^5.7.1",
-		"@fortawesome/fontawesome-svg-core": "^1.2.14",
-		"@fortawesome/free-brands-svg-icons": "^5.7.1",
-		"@fortawesome/free-regular-svg-icons": "^5.7.1",
-		"@fortawesome/free-solid-svg-icons": "^5.7.1",
+		"@fortawesome/fontawesome-free": "^5.7.2",
+		"@fortawesome/fontawesome-svg-core": "^1.2.15",
+		"@fortawesome/free-brands-svg-icons": "^5.7.2",
+		"@fortawesome/free-regular-svg-icons": "^5.7.2",
+		"@fortawesome/free-solid-svg-icons": "^5.7.2",
 		"@ngx-translate/core": "^11.0.1",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"@types/googlemaps": "^3.30.16",
 		"angular2-logger": "^0.7.0",
 		"apollo-angular": "^1.5.0",
-		"apollo-angular-link-http": "1.4.0",
-		"apollo-cache-inmemory": "^1.4.2",
-		"apollo-client": "2.4.8",
-		"apollo-link-context": "1.0.12",
-		"bootstrap": "^4.2.1",
+		"apollo-angular-link-http": "^1.5.0",
+		"apollo-cache-inmemory": "^1.5.1",
+		"apollo-client": "^2.5.1",
+		"apollo-link-context": "^1.0.14",
+		"bootstrap": "^4.3.1",
 		"browser-detect": "^0.2.28",
 		"bson-objectid": "^1.2.4",
 		"classlist.js": "^1.1.20150312",
-		"core-js": "^2.6.4",
+		"core-js": "^2.6.5",
 		"css-element-queries": "^1.1.1",
-		"graphql": "14.0.2",
-		"graphql-tag": "2.10.0",
+		"graphql": "^14.1.1",
+		"graphql-tag": "^2.10.1",
 		"hammerjs": "^2.0.8",
 		"http-server": "^0.11.1",
 		"ie-shim": "^0.1.0",
 		"masonry-layout": "^4.2.2",
 		"mdi-svg": "^2.2.43",
 		"ng-lazyload-image": "^5.0.0",
-		"ngx-drag-scroll": "^7.1.0",
+		"ngx-drag-scroll": "^7.1.3",
 		"ngx-hm-carousel": "^1.6.5-bata.1",
 		"ngx-infinite-scroll": "^7.0.1",
+		"ngx-toastr": "~9.1.2",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.4.0",
 		"rxjs-compat": "^6.4.0",
-		"sass": "^1.17.0",
+		"sass": "^1.17.2",
 		"sass-extract": "^2.1.0",
 		"sass-extract-loader": "^1.1.0",
 		"socket.io-client": "^2.2.0",
-		"stripe": "^6.23.1",
+		"stripe": "^6.25.1",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
 		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^0.13.1",
-		"@angular-devkit/build-optimizer": "^0.13.1",
+		"@angular-devkit/build-angular": "^0.13.4",
+		"@angular-devkit/build-optimizer": "^0.13.4",
 		"@angular-extensions/testing-library": "^3.1.0",
-		"@angular/cli": "^7.3.1",
-		"@angular/compiler-cli": "^7.2.4",
-		"@angular/language-service": "^7.2.4",
-		"@compodoc/compodoc": "^1.1.8",
-		"@ngtools/webpack": "^7.3.1",
+		"@angular/cli": "^7.3.4",
+		"@angular/compiler-cli": "^7.2.7",
+		"@angular/language-service": "^7.2.7",
+		"@compodoc/compodoc": "^1.1.9",
+		"@ngtools/webpack": "^7.3.4",
 		"@types/googlemaps": "^3.30.16",
 		"@types/hammerjs": "^2.0.36",
-		"@types/jasmine": "^3.3.8",
-		"@types/mongoose": "^5.3.12",
+		"@types/jasmine": "^3.3.9",
+		"@types/mongoose": "^5.3.20",
 		"@types/node": "^11.9.3",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/source-map": "^0.5.7",
-		"@types/stripe": "^6.19.7",
+		"@types/stripe": "^6.19.8",
 		"@types/stripe-node": "^4.7.1",
 		"@types/uglify-js": "^3.0.4",
 		"@types/uuid": "^3.4.4",
-		"@types/webpack": "^4.4.24",
+		"@types/webpack": "^4.4.25",
 		"@types/yargs": "^12.0.9",
 		"add-asset-html-webpack-plugin": "^3.1.3",
 		"angular2-template-loader": "^0.6.2",
-		"assets-webpack-plugin": "^3.9.7",
+		"assets-webpack-plugin": "^3.9.10",
 		"awesome-typescript-loader": "^5.2.1",
 		"codelyzer": "^4.5.0",
-		"copy-webpack-plugin": "^4.6.0",
+		"copy-webpack-plugin": "^5.0.0",
 		"cross-env": "^5.2.0",
 		"dotenv": "^6.2.0",
 		"envalid": "^4.2.2",
@@ -204,7 +205,7 @@
 		"istanbul-instrumenter-loader": "^3.0.1",
 		"jasmine-core": "^3.3.0",
 		"json-loader": "^0.5.7",
-		"karma": "^4.0.0",
+		"karma": "^4.0.1",
 		"karma-chrome-launcher": "^2.2.0",
 		"karma-coverage": "^1.1.2",
 		"karma-jasmine": "^2.0.1",
@@ -228,25 +229,25 @@
 		"sass-loader": "^7.1.0",
 		"script-ext-html-webpack-plugin": "^2.1.3",
 		"source-map-loader": "^0.2.4",
-		"standard-version": "4.4.0",
+		"standard-version": "^5.0.1",
 		"string-replace-loader": "^2.1.1",
 		"style-loader": "^0.23.1",
 		"to-string-loader": "^1.1.5",
 		"ts-node": "^8.0.2",
 		"tslib": "^1.9.3",
-		"tslint": "^5.12.1",
+		"tslint": "^5.13.1",
 		"tslint-loader": "^3.6.0",
 		"typedoc": "^0.14.2",
-		"uglifyjs-webpack-plugin": "^2.1.1",
+		"uglifyjs-webpack-plugin": "^2.1.2",
 		"url-loader": "^1.1.2",
-		"webpack": "^4.29.3",
-		"webpack-bundle-analyzer": "^3.0.3",
+		"webpack": "^4.29.6",
+		"webpack-bundle-analyzer": "^3.1.0",
 		"webpack-cli": "^3.2.3",
-		"webpack-dev-middleware": "^3.5.2",
-		"webpack-dev-server": "^3.1.4",
+		"webpack-dev-middleware": "^3.6.0",
+		"webpack-dev-server": "^3.2.1",
 		"webpack-inline-manifest-plugin": "^4.0.1",
 		"webpack-merge": "^4.2.1",
-		"yargs": "^13.1.0",
+		"yargs": "^13.2.1",
 		"typescript": "~3.1.6"
 	},
 	"engines": {
