feat: bring more features to Github repo

--- a/shop/mobile-ionic/ionic.config.json
+++ b/shop/mobile-ionic/ionic.config.json
@@ -1,7 +1,9 @@
 {
-	"name": "ever.shop.mobile",
-	"type": "angular",
+	"name": "ever-shop-mobile",
 	"integrations": {
 		"cordova": {}
-	}
+	},
+	"type": "ionic-angular",
+	"pro_id": "897e13e3",
+	"id": "897e13e3"
 }
